--- a/AnalyzerControlApp/AnalyzerControlGUI/packages.config
+++ b/AnalyzerControlApp/AnalyzerControlGUI/packages.config
@@ -37,7 +37,14 @@
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net48" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net48" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="WPFTabTip" version="1.2.2" targetFramework="net48" />
 </packages>
