--- a/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
+++ b/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
@@ -165,6 +165,10 @@
     <Compile Include="Migrations\20210417202334_InitialCreate.designer.cs">
       <DependentUpon>20210417202334_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\20210821092822_AddSheduledAnalyzes.cs" />
+    <Compile Include="Migrations\20210821092822_AddSheduledAnalyzes.designer.cs">
+      <DependentUpon>20210821092822_AddSheduledAnalyzes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\AnalyzerContextModelSnapshot.cs" />
     <Compile Include="Models\Analysis.cs" />
     <Compile Include="Models\AnalysisStage.cs" />
