Еще одно большое исправление - вынесены RelayCommand и ViewModel в MVVM; - ConveyorCellState вынесено в CellState и применено для ротора; - добавлено отображение цвета ячеек ротора, как у конвеера; - добавлено выделение ячеек ротора и конвеера; - исправлен выбор в канвас в контроллере ротора (передаем число ячеек конвеера); - переименованы ячейки картриджей; - расширены варианты промывки иглы (вода, щелочь); - добавлены новые действия для иглы и поршней; - изменена логика работы конвеера (по датчику пройденной ячейки);

--- a/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
+++ b/AnalyzerControlApp/AnalyzerControl/AnalyzerControl.csproj
@@ -132,6 +132,7 @@
     <Compile Include="AnalyzerController.cs" />
     <Compile Include="AnalyzerDemoController.cs" />
     <Compile Include="AnalyzerOperations.cs" />
+    <Compile Include="AssaysProcessingController.cs" />
     <Compile Include="Configuration\DemoControllerConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CartridgesDeckService.cs" />
