--- a/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
+++ b/AnalyzerControlApp/AnalyzerDomain/AnalyzerDomain.csproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzerContext.cs" />
+    <Compile Include="AnalyzesRepository.cs" />
     <Compile Include="Entyties\AnalysisInfo.cs" />
     <Compile Include="Entyties\Stage.cs" />
     <Compile Include="Migrations\20210417202334_InitialCreate.cs" />
