- add server address config into control app; - add wash buffer steps and speeds config; - add rotor steps to OM and place cell to OM; - add wash ACW and take OM; - fix OM values into AnalysisDescription (add OnPropertyChanged); - add Adiitional Units View; - add button Go To Safe Level (Needle Unit View); - add OM placement into Rotor Unit View

--- a/AnalyzerControlApp/PresentationWinForms/ServiceApp.csproj
+++ b/AnalyzerControlApp/PresentationWinForms/ServiceApp.csproj
@@ -194,6 +194,12 @@
     <Compile Include="CustomControls\DoubleBufferedDataGridView.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UnitsViews\AdditionalUnitsView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UnitsViews\AdditionalUnitsView.Designer.cs">
+      <DependentUpon>AdditionalUnitsView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ConnectionSettingsWindow.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -300,6 +306,9 @@
       <DependentUpon>StepperTurningView.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\DataGridViewStyler.cs" />
+    <EmbeddedResource Include="UnitsViews\AdditionalUnitsView.resx">
+      <DependentUpon>AdditionalUnitsView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Windows\ConnectionSettingsWindow.resx">
       <DependentUpon>ConnectionSettingsWindow.cs</DependentUpon>
     </EmbeddedResource>
